--- a/guestRaces/guestRacesTabs/ch23/settlement.html
+++ b/guestRaces/guestRacesTabs/ch23/settlement.html
@@ -200,7 +200,7 @@
                                     <div class="modal-body" style="text-align: left; max-height: 550px; overflow-y: auto;">
                                         <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">..:: Productions ::..<br></h5>
                                         <center><img src="https://i.ibb.co/YBB7nxmw/production-dwarven-1-productions.png" style="width: 70%;"><br><br></center>
-                                        Dwarven Heritage Hut uses Unicorn Blossoms (from Enar's Sanctum) to produce Dwarven Spirits. Fairy Spirits are used to produce Queen Honey, Dragon Teeth
+                                        Dwarven Heritage Hut uses Unicorn Blossoms (from Enar's Sanctum) to produce Dwarven Spirits. Spirits from other Heritage Huts are used to produce Queen Honey, Dragon Teeth
                                         and Flower Wreaths.<br><br>
                                         <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">..:: Requirements ::..<br></h5>
                                         <center><img src="https://i.ibb.co/SDRsfcv9/production-dwarven-1-costs.png" style="width: 60%;"></center>
@@ -225,7 +225,7 @@
                                     <div class="modal-body" style="text-align: left; max-height: 550px; overflow-y: auto;">
                                         <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">..:: Productions ::..<br></h5>
                                         <center><img src="https://i.ibb.co/hxkWG26Z/production-fairy-1-productions.png" style="width: 70%;"></center><br><br>
-                                        Fairies' Heritage Hut uses Unicorn Blossoms (from Enar's Sanctum) to produce Fairy Spirits. Orc Spirits are used to produce Dragon Teeth, Flower Wreaths
+                                        Fairies' Heritage Hut uses Unicorn Blossoms (from Enar's Sanctum) to produce Fairy Spirits. Spirits from other Heritage Huts are used to produce Dragon Teeth, Flower Wreaths
                                         and Azurite.<br><br>
                                         <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">..:: Requirements ::..<br></h5>
                                         <center><img src="https://i.ibb.co/ccjVp9Dn/production-fairy-1-costs.png" style="width: 60%;"></center>
@@ -250,7 +250,7 @@
                                     <div class="modal-body" style="text-align: left; max-height: 550px; overflow-y: auto;">
                                         <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">..:: Productions ::..<br></h5>
                                         <center><img src="https://i.ibb.co/zVPj8pWK/production-orc-1-productions.png" style="width: 70%;"></center><br><br>
-                                        Orcish Heritage Hut uses Unicorn Blossoms (from Enar's Sanctum) to produce Orc Spirits. Halfling Spirits are used to produce Flower Wreaths, Azurite
+                                        Orcish Heritage Hut uses Unicorn Blossoms (from Enar's Sanctum) to produce Orc Spirits. Spirits from other Heritage Huts are used to produce Flower Wreaths, Azurite
                                         and Queen Honey.<br><br>
                                         <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">..:: Requirements ::..<br></h5>
                                         <center><img src="https://i.ibb.co/yndrn5d2/production-orc-1-costs.png" style="width: 60%;"></center>
@@ -275,7 +275,7 @@
                                     <div class="modal-body" style="text-align: left; max-height: 550px; overflow-y: auto;">
                                         <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">..:: Productions ::..<br></h5>
                                         <center><img src="https://i.ibb.co/Q3gPfzBh/production-halfling-1-productions.png" style="width: 70%;"></center><br><br>
-                                        Halflings' Heritage Hut uses Unicorn Blossoms (from Enar's Sanctum) to produce Halfling Spirits. Dwarven Spirits are used to produce Azurite, Queen Honey
+                                        Halflings' Heritage Hut uses Unicorn Blossoms (from Enar's Sanctum) to produce Halfling Spirits. Spirits from other Heritage Huts are used to produce Azurite, Queen Honey
                                         and Dragon Teeth..<br><br>
                                         <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">..:: Requirements ::..<br></h5>
                                         <center><img src="https://i.ibb.co/nNWnvbpc/production-halfling-1-costs.png" style="width: 60%;"></center>
