--- a/guestRaces/guestRacesTabs/ch23/settlement.html
+++ b/guestRaces/guestRacesTabs/ch23/settlement.html
@@ -299,6 +299,9 @@
         </li>
         <li>Note that Portal Profit instants do not work for previous portals - they only provide resources for the current chapter, which in Chapter 23 are Unicorn Blossoms.
         </li>
+        <li>In preparation for this chapter, it will be beneficial to build the portals for the Dwarves, Fairies, Orcs, and Halflings in advance and try to level them up to level 4.
+            Do not sell the production buildings associated with these portals until you have completed the respective quests in this chapter's questline.
+        </li>
         <li>More to be added
         </li>
     </ul>
