--- a/guestRaces/guestRacesTabs/ch23/intro.html
+++ b/guestRaces/guestRacesTabs/ch23/intro.html
@@ -48,7 +48,7 @@
         <center><img src="https://i.ibb.co/DD2xMgV6/mobile-banner.png" style="margin-bottom: 10px; width: 100px;"></center>
 
         Chapter 23 offers a break from discovering new resources and features. Instead, the story will guide you through the highlights of past chapters.
-        Alongside brand-new, beautiful buildings, you'll also need to construct settlements for some of the previous Guest Races, such as the Dwarves, Fairies, Dragons, and Halflings.<br><br>
+        Alongside brand-new, beautiful buildings, you'll also need to construct settlements for some of the previous Guest Races, such as the Dwarves, Fairies, Orcs, and Halflings.<br><br>
 
         <center><img src="" style="max-height: 200px; border-radius: 8px;"></center>
 
