Update buildings + season of secrets release

--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
         <div class="col-md-6 col-sm-11 center bg-skin_light_background rounded-bottom75 rounded-top75" style="padding-top: 20px; padding-bottom: 20px; max-height: 550px; overflow-y: scroll;">
             <div
              id="column_with_news" class="col-md">
+                <li><strong>The Autumn Zodiac event arrived!</strong> All buildings from this event are now in the database (August 15th 2025)</li>
                 <li><strong>The Crystal Expedition event arrived!</strong> All buildings from this event are now in the database (July 17th 2025)</li>
                 <li><strong>The Elvarian Games event arrived!</strong> All buildings from this event are now in the database (June 13th 2025)</li>
                 <li><strong>Chapter 23 arrived!</strong> All buildings have been regenerated to contain values for chapter 23 (May 19th 2025)</li>
