theater_yulecat_xxv release + guardians implementation

--- a/admin.html
+++ b/admin.html
@@ -246,6 +246,14 @@ Odmena1<br></h7>
 
 </div>
 
+<div class="container" style="margin-bottom: 20px;">
+    <p>Guardians:</p>
+
+    guardians file: <input class="form-control-file" type="file" id="guardians" name="filename"><br>
+    <button class="btn btn-lg btn-warning btn-block text-uppercase" onclick="generateGuardians()">GENERATE</button>
+
+</div>
+
 
 </body>
 </html>
