--- a/buildings.html
+++ b/buildings.html
@@ -47,6 +47,9 @@
     <script src="database//notifications.js"></script>
     <script src="database/eventsSelectors.js"></script>
     <script src="database/flexibleRewards.js"></script>
+    <script src="database/guardiansVariousData.js"></script>
+    <script src="database/guardians.js"></script>
+    <script src="database/effectConfigs.js"></script>
 
     <!-- Modified Bootstrap CSS -->
     <title>All Buildings - iDavis Elvenar</title>
