--- a/guestRaces/guestRacesTabs/ch24/settlement.html
+++ b/guestRaces/guestRacesTabs/ch24/settlement.html
@@ -43,10 +43,10 @@
                 </tr>
                 <tr>
                     <td style="text-align: center">
-                        <button type="button" class="btn btn-download" data-toggle="modal" data-target="#modal_portal_1">
+                        <button type="button" class="btn btn-download" data-toggle="modal" data-target="#modal_portal_1_1">
                             Details
                         </button>
-                        <div id="modal_portal_1" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                        <div id="modal_portal_1_1" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
                             <div class="modal-dialog modal-lg" role="document">
                               <div class="modal-content">
                                     <div class="modal-header" style="text-align: center;">
@@ -68,10 +68,10 @@
                         </div>
                     </td>
                     <td style="text-align: center">
-                        <button type="button" class="btn btn-download" data-toggle="modal" data-target="#modal_portal_2">
+                        <button type="button" class="btn btn-download" data-toggle="modal" data-target="#modal_portal_1_2">
                             Details
                         </button>
-                        <div id="modal_portal_2" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                        <div id="modal_portal_1_2" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
                             <div class="modal-dialog modal-lg" role="document">
                               <div class="modal-content">
                                     <div class="modal-header" style="text-align: center;">
@@ -95,10 +95,10 @@
                         </div>
                     </td>
                     <td style="text-align: center">
-                        <button type="button" class="btn btn-download" data-toggle="modal" data-target="#modal_portal_3">
+                        <button type="button" class="btn btn-download" data-toggle="modal" data-target="#modal_portal_1_3">
                             Details
                         </button>
-                        <div id="modal_portal_3" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                        <div id="modal_portal_1_3" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
                             <div class="modal-dialog modal-lg" role="document">
                               <div class="modal-content">
                                     <div class="modal-header" style="text-align: center;">
@@ -119,10 +119,10 @@
                         </div>
                     </td>
                     <td style="text-align: center">
-                        <button type="button" class="btn btn-download" data-toggle="modal" data-target="#modal_portal_4">
+                        <button type="button" class="btn btn-download" data-toggle="modal" data-target="#modal_portal_1_4">
                             Details
                         </button>
-                        <div id="modal_portal_4" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                        <div id="modal_portal_1_4" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
                             <div class="modal-dialog modal-lg" role="document">
                               <div class="modal-content">
                                     <div class="modal-header" style="text-align: center;">
@@ -171,10 +171,10 @@
                 </tr>
                 <tr>
                     <td style="text-align: center">
-                        <button type="button" class="btn btn-download" data-toggle="modal" data-target="#modal_portal_1">
+                        <button type="button" class="btn btn-download" data-toggle="modal" data-target="#modal_portal_2_1">
                             Details
                         </button>
-                        <div id="modal_portal_1" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                        <div id="modal_portal_2_1" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
                             <div class="modal-dialog modal-lg" role="document">
                               <div class="modal-content">
                                     <div class="modal-header" style="text-align: center;">
@@ -196,10 +196,10 @@
                         </div>
                     </td>
                     <td style="text-align: center">
-                        <button type="button" class="btn btn-download" data-toggle="modal" data-target="#modal_portal_2">
+                        <button type="button" class="btn btn-download" data-toggle="modal" data-target="#modal_portal_2_2">
                             Details
                         </button>
-                        <div id="modal_portal_2" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                        <div id="modal_portal_2_2" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
                             <div class="modal-dialog modal-lg" role="document">
                               <div class="modal-content">
                                     <div class="modal-header" style="text-align: center;">
@@ -223,10 +223,10 @@
                         </div>
                     </td>
                     <td style="text-align: center">
-                        <button type="button" class="btn btn-download" data-toggle="modal" data-target="#modal_portal_3">
+                        <button type="button" class="btn btn-download" data-toggle="modal" data-target="#modal_portal_2_3">
                             Details
                         </button>
-                        <div id="modal_portal_3" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                        <div id="modal_portal_2_3" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
                             <div class="modal-dialog modal-lg" role="document">
                               <div class="modal-content">
                                     <div class="modal-header" style="text-align: center;">
@@ -247,10 +247,10 @@
                         </div>
                     </td>
                     <td style="text-align: center">
-                        <button type="button" class="btn btn-download" data-toggle="modal" data-target="#modal_portal_4">
+                        <button type="button" class="btn btn-download" data-toggle="modal" data-target="#modal_portal_2_4">
                             Details
                         </button>
-                        <div id="modal_portal_4" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                        <div id="modal_portal_2_4" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
                             <div class="modal-dialog modal-lg" role="document">
                               <div class="modal-content">
                                     <div class="modal-header" style="text-align: center;">
