--- a/guestRaces/guestRacesTabs/ch16/intro.html
+++ b/guestRaces/guestRacesTabs/ch16/intro.html
@@ -13,6 +13,14 @@
             <p class="small-paragraph">It appears that Unur is not only fertile again but the once extinct races you brought back to live in Elvenar have also reappeared there with their own cultures, cities and of course conflicts. In this new Chapter, we will see how, once again, a dispute between Dwarves and Fairies threatens the lands! The Dwarves need a lot of wood to fire up their foundries and have started to cut down trees in the Fairy realm of Unur. Of course, the Fairies are quite displeased with this fact and want to stop them. There is little understanding for the other's position but, after they heard about your abilities to overcome the conflicts between Elves and Humans, they entrust you with finding a solution.</p>
         </i>
         <br>
+
+        <div class="card-spoiler-visualOnly border-spoiler mb-3" style="width: 100%; padding-top: 20px; padding-bottom: 20px; padding-left: 2%; padding-right: 2%;">
+
+        <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Introduction video<br></h5>
+
+        <iframe class="center" width="560px" height="315.2px" allowfullscreen="true" src="https://www.youtube.com/embed/yR9hbF9QqJE"></iframe>
+
+        </div>
         
     </div>
 
