--- a/guestRaces/guestRacesTabs/ch17/intro.html
+++ b/guestRaces/guestRacesTabs/ch17/intro.html
@@ -17,6 +17,14 @@
             <p class="small-paragraph">Explore this new Chapter in the story of Elvenar, build a commercial port, and learn more about the three factions of the Traders of Unur, as well as their motives, lifestyle and precious wares! And who knows, maybe you will even learn a valuable lesson on camaraderie in the process!</p>
         </i>
         <br>
+
+        <div class="card-spoiler-visualOnly border-spoiler mb-3" style="width: 100%; padding-top: 20px; padding-bottom: 20px; padding-left: 2%; padding-right: 2%;">
+
+        <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Introduction video<br></h5>
+
+        <iframe class="center" width="560px" height="315.2px" allowfullscreen="true" src="https://www.youtube.com/embed/3WvZJMsYJVA"></iframe>
+
+        </div>
         
     </div>
 
