--- a/guestRaces/guestRacesTabs/ch20/intro.html
+++ b/guestRaces/guestRacesTabs/ch20/intro.html
@@ -42,6 +42,14 @@
 
         </div>
 
+        <div class="card-spoiler-visualOnly border-spoiler mb-3" style="width: 100%; padding-top: 20px; padding-bottom: 20px; padding-left: 2%; padding-right: 2%;">
+
+        <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Introduction video<br></h5>
+
+        <iframe class="center" width="560px" height="315.2px" allowfullscreen="true" src="https://www.youtube.com/embed/jZisAoOB1mI"></iframe>
+
+        </div>
+
     </div>
 
 </div>
