--- a/guestRaces/guestRacesTabs/ch23/intro.html
+++ b/guestRaces/guestRacesTabs/ch23/intro.html
@@ -64,6 +64,14 @@
             <img src="https://i.ibb.co/DfFmwnkK/portrait-id-ch23-m1.png"> <img src="https://i.ibb.co/0yCb4wMb/portrait-id-ch23-m2.png"></center>
 
         </div>
+
+        <div class="card-spoiler-visualOnly border-spoiler mb-3" style="width: 100%; padding-top: 20px; padding-bottom: 20px; padding-left: 2%; padding-right: 2%;">
+
+        <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Introduction video<br></h5>
+
+        <iframe class="center" width="560px" height="315.2px" allowfullscreen="true" src="https://www.youtube.com/embed/SYBHgYDFAhU"></iframe>
+
+        </div>
         
     </div>
 
