--- a/guestRaces/guestRacesTabs/ch18/intro.html
+++ b/guestRaces/guestRacesTabs/ch18/intro.html
@@ -13,6 +13,14 @@
             <p class="small-paragraph">Using Unurium, the Constructs teach Humans and Elves to construct a portal to the dimension of the Elementals. Will the Elementals be happy to help, and will Humans, Elves and Elvenar be able to put aside their differences?</p>
         </i>
         <br>
+
+        <div class="card-spoiler-visualOnly border-spoiler mb-3" style="width: 100%; padding-top: 20px; padding-bottom: 20px; padding-left: 2%; padding-right: 2%;">
+
+        <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Introduction video<br></h5>
+
+        <iframe class="center" width="560px" height="315.2px" allowfullscreen="true" src="https://www.youtube.com/embed/2z_lqN_cZQE"></iframe>
+
+        </div>
         
     </div>
 
