--- a/guestRaces/guestRacesTabs/ch19/intro.html
+++ b/guestRaces/guestRacesTabs/ch19/intro.html
@@ -43,6 +43,14 @@
             <img src="https://i.ibb.co/ZdMHp0P/portrait-3.png"> <img src="https://i.ibb.co/BrP1Yx4/portrait-4.png"></center>
 
         </div>
+
+        <div class="card-spoiler-visualOnly border-spoiler mb-3" style="width: 100%; padding-top: 20px; padding-bottom: 20px; padding-left: 2%; padding-right: 2%;">
+
+        <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Introduction video<br></h5>
+
+        <iframe class="center" width="560px" height="315.2px" allowfullscreen="true" src="https://www.youtube.com/embed/6ebYBJUemwk"></iframe>
+
+        </div>
         
     </div>
 
