--- a/guestRaces/guestRacesTabs/ch21/intro.html
+++ b/guestRaces/guestRacesTabs/ch21/intro.html
@@ -67,6 +67,14 @@
             <img src="https://i.ibb.co/6nxpf2T/portrait3.png"> <img src="https://i.ibb.co/Lpb9gdc/portrait4.png"></center>
 
         </div>
+
+        <div class="card-spoiler-visualOnly border-spoiler mb-3" style="width: 100%; padding-top: 20px; padding-bottom: 20px; padding-left: 2%; padding-right: 2%;">
+
+        <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Introduction video<br></h5>
+
+        <iframe class="center" width="560px" height="315.2px" allowfullscreen="true" src="https://www.youtube.com/embed/tU13HtUF0VY"></iframe>
+
+        </div>
         
     </div>
 
