--- a/guestRaces/guestRacesTabs/ch24/intro.html
+++ b/guestRaces/guestRacesTabs/ch24/intro.html
@@ -56,6 +56,14 @@ Bastet Sothep VII can only laugh at such objections - after all, she is a goddes
             <img src="https://i.ibb.co/d45w55Rp/portrait-id-ch24-m1.png"> <img src="https://i.ibb.co/nMnWXQWK/portrait-id-ch24-m2.png"></center>
 
         </div>
+
+        <div class="card-spoiler-visualOnly border-spoiler mb-3" style="width: 100%; padding-top: 20px; padding-bottom: 20px; padding-left: 2%; padding-right: 2%;">
+
+        <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Introduction video<br></h5>
+
+        <iframe class="center" width="560px" height="315.2px" allowfullscreen="true" src="https://www.youtube.com/embed/r9pZ0Df9zgk"></iframe>
+
+        </div>
         
     </div>
 
