ch24 settlement small updates + fa january_xxvi release

--- a/guestRaces/guestRacesTabs/ch24/settlement.html
+++ b/guestRaces/guestRacesTabs/ch24/settlement.html
@@ -409,7 +409,25 @@
     <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">..:: Tips & Tricks ::..<br><br></h5>
 
     <ul>
-        <li>More to be added
+        <li>
+            How to prepare for this chapter:
+            <ul>
+                <li>
+                    You will need a large amount of Nox in this chapter. Its production at the Trader depends on the required Prosperity in your city. To increase your Nox production, you can prepare in advance by constructing earlier Portals that require Prosperity
+                    (specifically the Portals from Chapters 21, 22, and 23, with those from Chapters 21 and 22 being very easy to rebuild).
+                </li>
+                <li>
+                    A significant amount of Ascended Goods is required to progress through the research tree. Make sure to switch some of your Residential Buildings to produce Community Work. If you have the Maman Le Pré's Antique Shop Ancient Wonder, this
+                    Community Work production will also generate Ascended Goods. You can further increase this production by using Ensorcelled Endowment spells on as many cultural buildings as possible and receiving Neighbourly Help. This approach allows you to avoid building
+                    additional Manufactories for Ascended Goods.
+                </li>
+                <li>
+                    Use Ensorcelled Endowment spells on cultural buildings to also increase the production of Canned Goods in your Workshops.
+                </li>
+            </ul>
+        </li>
+        <li>
+            More to be added
         </li>
     </ul>
         
