Create Discord promo

--- a/contact.html
+++ b/contact.html
@@ -159,6 +159,38 @@
 
 <div class="container">
     <div class="row" style="margin-top: 50px;">
+        <div class="col-sm-12 col-md-12 col-lg-12 mx-auto ">
+            <div class="card card-signin my-5 ">
+                <div class="card-body ">
+                    <h1 id="contact" class="card-title text-center text-warning">Reach me on Discord <img src="https://i.ibb.co/wZGRGRnv/discord.png" style="width: 40px;"></h1><br/>
+                    <h6 class="card-title text-center">I have created a space on Discord, where you can reach me out more effectively and provide your feedback more easily.</h6><br/>
+                    
+                    <b>1) I am not yet on Discord</b><br/>
+                    If you are not yet on Discord and want to join, you can use the invitation link <a href="https://discord.com/invite/elvenar-1136205917306753035" class="text-link"><b>HERE</b></a>.  
+                    After selecting your nickname, setting your date of birth, and agreeing to Discord's Terms of Service, you will be introduced to the Welcome Center of the official Elvenar server.  
+                    To access the iDavis-Elvenar website-related space, make sure to select "English" as one of your languages. This will give you access to the English section of the server, where my dedicated space is located.<br/><br/>
+
+                    Discord is a free and safe communication platform for gaming communities, where users can chat and share information about the game. It is very popular today and joining it will definitely enhance your gaming experience!<br/><br/>
+
+                    <b>2) I am already on the server</b><br/>
+                    Once you have joined the Discord server, congratulations! In the list of channels on the left-hand side, you can find the English section. One of the channels there is called "elvenar-discussions" - click it to open.<br/>
+                    <img src="https://i.ibb.co/ZR4qS73p/discord-elvenar-1.png"><br/><br/>
+
+                    Next, among the threads, search for "iDavis-Elvenar: Updates & Feedback".<br/>
+                    <img src="https://i.ibb.co/hJnvktJZ/discord-elvenar-2.png"><br/><br/>
+
+                    This is the thread you can use to provide feedback and chat with me in real time.<br/><br/>
+
+                    I hope you find this useful. This new method will now be preferred over the Contact Form via email, which you can still find below.
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+<div class="container">
+    <div class="row">
         <div class="col-sm-9 col-md-7 col-lg-5 mx-auto ">
             <div class="card card-signin my-5 ">
                 <div class="card-body " id="contact_body">
