merge_dwarvengame_xxvi trades release

--- a/eventTabs/merge_dwarvengame_xxvi_/trades.html
+++ b/eventTabs/merge_dwarvengame_xxvi_/trades.html
@@ -46,7 +46,7 @@
  <script>
  if (typeof currencies === "undefined") {
      var currencies = {
-         "merge_dwarvengame_xxv_": {
+         "merge_dwarvengame_xxvi_": {
              "ec": "https://i.ibb.co/4tYSS6K/EL-akcia-august-2022-event-currency-1.png",
              "ep": "https://i.ibb.co/ChK4qRW/EL-akcia-august-2022-payback.png",
              "event_currency_2": "https://i.ibb.co/tqTM3ck/EL-akcia-august-2022-event-currency-2.png",
