Add notification for city planner

--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
         <div class="col-md-6 col-sm-11 center bg-skin_light_background rounded-bottom75 rounded-top75" style="padding-top: 20px; padding-bottom: 20px; max-height: 550px; overflow-y: scroll;">
             <div
              id="column_with_news" class="col-md">
+                <li><strong>New City Planner has been introduced!</strong> Start planning with the newest <a href="https://elvenar-tools.com/city-planner" target="_blank" class="text-link-bold">City Planner</a> by iDavis now! (February 12th 2026)</li>
                 <li><strong>The Summit Trials event arrived!</strong> All buildings from this event are now in the database (February 2nd 2026)</li>
                 <li><strong>The Duplication Disaster event arrived!</strong> All buildings from this event are now in the database (December 8th 2025)</li>
                 <li><strong>Chapter 24 arrived!</strong> All buildings have been regenerated to contain values for chapter 24 (November 26th 2025)</li>
